# KotlinPro

./: README.md
Coroutine/: .gitignore  build.gradle.kts  deps.txt  gradle.properties  settings.gradle.kts
Coroutine/SkinTool/: build.gradle.kts
Coroutine/SkinTool/src/main/java/utils/: SkinResources.java
Coroutine/app/: build.gradle.kts
Coroutine/app/schemas/com.example.coroutine.jetpack.room.db.PersonDataBase/: 1.json  2.json  3.json  4.json
Coroutine/app/src/main/: AndroidManifest.xml
Coroutine/app/src/main/res/layout/: activity_aidlactivity.xml  activity_cake.xml  activity_car_home.xml  activity_databinding.xml  activity_life_service.xml  activity_livecycle.xml  activity_main.xml  activity_main2.xml  activity_mvvm.xml  activity_net.xml  activity_paging.xml  activity_retrofit.xml  activity_retrofit2.xml  activity_room.xml  activity_room_optimize.xml  activity_work_manager.xml  cake_item.xml  carbrand_item.xml  content_net.xml  fragment_detail.xml  fragment_home.xml  network_state_item.xml  paging_adapter_item.xml  (+1 more)
Coroutine/arouter-annotation/: build.gradle.kts
Coroutine/gradle/: libs.versions.toml
Coroutine/gradle/wrapper/: gradle-wrapper.properties
Coroutine/origincode/: CMakeLists.txt  build.gradle.kts
Coroutine/origincode/src/main/: AndroidManifest.xml
Coroutine/origincode/src/main/cpp/: JNILoader.cpp
Coroutine/plugin/: build.gradle.kts
Coroutine/plugin/src/main/: AndroidManifest.xml
Coroutine/server/: build.gradle.kts
Coroutine/server/src/main/: AndroidManifest.xml
Coroutine/video/: build.gradle.kts
Coroutine/video/src/main/: AndroidManifest.xml
Coroutine/video/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  NativeSimplePlayer.cpp  NativeSimplePlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib-myFFmpeg.cpp  util.h
(+302 files in other folders)
